management-infrastructure/monitoring-mgmt/manifests/31-prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: monitoring
  labels:
    fleet.cattle.io/managed: "true"
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: monitoring-traefik-headers@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
  - host: prometheus.mgmt.mbtux.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus
            port:
              number: 9090
